# retail-ops-mlops-lakehouse

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
dbt/: profiles.yml
dbt/m5/: dbt_project.yml
dbt/m5/models/staging/: schema.yml  stg_m5_gold.sql
scripts/: run.ps1  run.sh  run_m5.ps1
src/retail_ops_mlops/: __main__.py  cli.py
src/retail_ops_mlops/pipelines/: __init__.py  bronze_m5.py  build_features_m5.py  download_m5.py  dq_m5.py  eval_m5.py  gold_m5.py  ingest_m5.py  run_m5.py  silver_m5.py  train_m5.py  train_m5.py.bak
src/retail_ops_mlops/utils/: config.py  logging.py
tests/: test_smoke.py
