[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "retail-ops-mlops-lakehouse"
version = "0.1.0"
description = "Capstone: Retail Ops ML (Lakehouse + MLOps)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Salar" }]
dependencies = [
  "pandas>=2.2",
  "pyarrow>=16",
  "pyyaml>=6.0",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "tqdm>=4.66",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/retail_ops_mlops"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
fixable = ["ALL"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
